--- a/index.html
+++ b/index.html
@@ -1,12 +1,102 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My First Website</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hari Om – Portfolio</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(135deg, #4b79a1, #283e51);
+            color: white;
+            text-align: center;
+        }
+
+        header {
+            padding: 60px 20px;
+        }
+
+        h1 {
+            font-size: 48px;
+            margin-bottom: 10px;
+        }
+
+        p.subtitle {
+            font-size: 20px;
+            opacity: 0.9;
+        }
+
+        .btn {
+            display: inline-block;
+            margin-top: 25px;
+            padding: 12px 25px;
+            background: #ffffff;
+            color: #283e51;
+            border-radius: 8px;
+            font-size: 18px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .btn:hover {
+            background: #e2e2e2;
+        }
+
+        section {
+            margin: 50px auto;
+            max-width: 900px;
+            padding: 20px;
+        }
+
+        .card {
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 25px;
+            border-radius: 15px;
+            margin-bottom: 20px;
+        }
+
+        footer {
+            margin-top: 50px;
+            padding: 20px;
+            font-size: 14px;
+            opacity: 0.7;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
-    <p>This is hosted on GitHub Pages.</p>
+
+    <header>
+        <h1>Hi, I'm Hari Om 👋</h1>
+        <p class="subtitle">DevOps Learner • Python • Web Design • GitHub</p>
+        <a class="btn" href="https://github.com/hariomlodha95" target="_blank">Visit My GitHub</a>
+    </header>
+
+    <section>
+        <div class="card">
+            <h2>💻 About Me</h2>
+            <p>
+                I am learning DevOps, Python, and web development.  
+                I love building projects and hosting them online using GitHub Pages.
+            </p>
+        </div>
+
+        <div class="card">
+            <h2>🚀 Skills</h2>
+            <p>HTML • CSS • JavaScript • Python • Git • GitHub • Linux • DevOps Basics</p>
+        </div>
+
+        <div class="card">
+            <h2>📂 Projects</h2>
+            <p>Static Website with GitHub Pages • Kubernetes Practice • Terraform IaC</p>
+        </div>
+    </section>
+
+    <footer>
+        © 2025 Hari Om | Hosted on GitHub Pages
+    </footer>
+
 </body>
 </html>
 
-<-- trigger github pages -->
